# halo

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
coverage/: coverage-summary.json
scripts/: coverage.sh  fetch-sidecars.sh
src/: App.css  App.test.tsx  App.tsx  index.css  index.html  ipc.test.ts  ipc.ts  labels.test.ts  labels.ts  markdown.test.ts  markdown.ts  store.test.tsx  store.tsx  types.ts  updater.test.ts  updater.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  calendar.rs  commands.rs  import.rs  integrations.rs  lib.rs  llm.rs  main.rs  models.rs  research.rs  state.rs  storage.rs  transcribe.rs  types.rs
src/components/: MainPane.test.tsx  MainPane.tsx  NoteDetail.test.tsx  NoteDetail.tsx  Sidebar.test.tsx  Sidebar.tsx  icons.test.tsx  icons.tsx
src/screens/: Settings.test.tsx  Settings.tsx  Setup.test.tsx  Setup.tsx
