[package]
name = "halo"
version = "0.1.0"
description = "Lightweight AI notetaking app"
authors = ["Eugene Fishlock <eugene.fishlock@icloud.com>"]
edition = "2021"

[lib]
name = "halo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
cpal = "0.15"
hound = "3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
